--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <receiver android:name="com.joancolmenero.broadcastreceiverandalarmmanagerkotlin.MyReceiver" >
+        <receiver android:name="sysaxiom.alarmmanager.MyReceiver" >
         </receiver>
         <activity
-                android:name="com.joancolmenero.broadcastreceiverandalarmmanagerkotlin.MainActivity"
+                android:name="sysaxiom.alarmmanager.AlarmManagerActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
